Localize templates and js

--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -1,3 +1,4 @@
+{{! implement ii8n? }}
 <div class="alert alert-warning fade in">
     <button type="button" class="close" data-trigger="nix" data-nix-options="'target': '!div.alert'">×</button>
     <h4>Welcome to {{appTitle}}</h4>
