--- a/templates/mainmenu.hbs
+++ b/templates/mainmenu.hbs
@@ -1,9 +1,9 @@
 <ul class="main-menu dropdownmenu hidden">
-    <a class="internal" href="options"><li><span>Options</span></li></a>
-    {{#if atheme}}<a class="internal" href="channels"><li><span>Channel List</span></li></a>{{/if}}
-    <a class="internal" href="embed"><li><span>Add webchat to your site</span></li></a>
-    <a class="internal" href="privacy"><li><span>Privacy policy</span></li></a>
-    <a class="internal" href="faq"><li><span>Frequently asked questions</span></li></a>
-    <a class="internal" href="feedback"><li><span>Submit feedback</span></li></a>
-    <a class="internal" href="about"><li><span>About qwebirc</span></li></a>
+    <a class="internal" href="options"><li><span>{{lang 'windowNames.options'}}</span></li></a>
+    {{#if atheme}}<a class="internal" href="channels"><li><span>{{lang 'windowNames.channels'}}</span></li></a>{{/if}}
+    <a class="internal" href="embed"><li><span>{{lang 'windowNames.embed'}}</span></li></a>
+    <a class="internal" href="privacy"><li><span>{{lang 'windowNames.privacy'}}</span></li></a>
+    <a class="internal" href="faq"><li><span>{{lang 'windowNames.faq'}}/span></li></a>
+    <a class="internal" href="feedback"><li><span>{{lang 'windowNames.feedback'}}</span></li></a>
+    <a class="internal" href="about"><li><span>{{lang 'windowNames.about'}}</span></li></a>
 </ul>
