Base urls for jQuery icons

--- a/less/qwebirc.less
+++ b/less/qwebirc.less
@@ -1,7 +1,6 @@
-@import (less) "qwebirc/jQuery-Icons.css";
-
-/*!
+/*
  * qwebirc css by Graeme (megawac) Yeates
+ * https://github.com/megawac/qwebirc-enhancements
  */
 
 // Load core variables and mixins
@@ -24,3 +23,4 @@
 //QUI Theme
 @import "qwebirc/qui";
 
+@import "qwebirc/jQuery-Icons.less";
