Request Localization files via http request
Requires service from
https://github.com/megawac/iris/commit/fed82b8a6a4c9168fda4ee12a657fde5bddfc337

--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -21,6 +21,14 @@
                 </label>
             </div>
             <div class="controls">
+                <label class="checkbox" for="image_popout">
+                    <a target="_blank" href="http://i.imgur.com/cMiwR5o.png">
+                        {{lang "ENABLE_IMAGE_POPOUT"}}
+                    </a>
+                    <input type="checkbox" id="image_popout" {{check image_popout}}>
+                </label>
+            </div>
+            <div class="controls">
                 <label class="checkbox" for="nick_colours">
                     {{lang "NICK_COLOURS"}}
                     <input type="checkbox" id="nick_colours" {{check nick_colours}}>
