--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -12,7 +12,7 @@
             </label>
         </div>
         <div class="control-group right {{#unless full}}hidden{{/unless}}">
-            <label class="control-label" for="password">{{'password'}}:
+            <label class="control-label" for="password">{{lang 'password'}}:
                 <input type="password" class="form-control" data-validate="password" name="full" id="password" value="{{password}}">
             </label>
         </div>
