--- a/templates/mainmenu.hbs
+++ b/templates/mainmenu.hbs
@@ -3,7 +3,7 @@
     {{#if atheme}}<a class="internal" href="channels"><li><span>{{lang 'windowNames.channels'}}</span></li></a>{{/if}}
     <a class="internal" href="embed"><li><span>{{lang 'windowNames.embed'}}</span></li></a>
     <a class="internal" href="privacy"><li><span>{{lang 'windowNames.privacy'}}</span></li></a>
-    <a class="internal" href="faq"><li><span>{{lang 'windowNames.faq'}}/span></li></a>
+    <a class="internal" href="faq"><li><span>{{lang 'windowNames.faq'}}</span></li></a>
     <a class="internal" href="feedback"><li><span>{{lang 'windowNames.feedback'}}</span></li></a>
     <a class="internal" href="about"><li><span>{{lang 'windowNames.about'}}</span></li></a>
 </ul>
