--- a/less/qwebirc/bootstrap-theme.less
+++ b/less/qwebirc/bootstrap-theme.less
@@ -21,7 +21,7 @@
       .button-variant(grey; @send-grey; @send-grey-back);
       padding: 2px 10px;
     }
-    /*http://www.helloerik.com/column-examples/example4.html*/
+    // http://www.helloerik.com/column-examples/example4.html
     //Probably shouldnt do this as its included in 3.1 with different padding
     .container-fluid {
         padding: 0;
