--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -41,7 +41,7 @@
 // Components w/ JavaScript
 @import "twbs/modals.less";
 // @import "twbs/tooltip.less";
-// @import "twbs/popovers.less";
+@import "twbs/popovers.less";
 // @import "twbs/carousel.less";
 
 // Utility classes
