--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -1,3 +1,7 @@
+//imports 
+@import "image-popover";
+
+
 // Main QUI theme styles 
 .qui {
     .dropdownmenu {
@@ -139,10 +143,15 @@
         font-size: 0.7em;
     }
 
-    .lines .nick {
-        margin-right: 4px;
-        .channel {
-            color: #6d5959;
+    .lines {
+        .timestamp {
+            margin-right: 0.5em;
+        }
+        .nick {
+            margin-right: 4px;
+            .channel {
+                color: #6d5959;
+            }
         }
     }
 
