Drop nick_colours and Window refactoring
Seperated the responsibilities of ui.Window and ui.QUI.Window and added
ui.IDetachable

--- a/templates/window.hbs
+++ b/templates/window.hbs
@@ -1,4 +1,4 @@
-<div class="window" data-id="{{id}}" data-name="{{name}}">
+<div class="window {{#if isIRCWindow}}ircwindow{{/if}}" data-id="{{id}}" data-name="{{name}}">
     {{#if isChannel}}
         <div class='topic'>{{> topicText}}</div>
     {{/if}}
