Drop chan menus

--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -18,14 +18,8 @@
         }
     }
 
-    .chanmenu {
-        width: 150px;
-
-        .hint {
-            float: right;
-            font-size: 75%;
-            color: grey;
-        }
+    .nick-menu {
+        max-width: 150px;
     }
 
     .dropdownhint {
