Localize custom panels (seperately)
Ping #7

--- a/panes/channel-list.hbs
+++ b/panes/channel-list.hbs
@@ -1,8 +1,8 @@
 <div class="channel-list panel panel-default">
     <div class="panel-heading">
-        <span class="heading">Channel list</span>
+        <span class="heading">{{lang "channels.title"}}</span>
         <div class="filters">
-            <label>Filter by topic and name: <input class="filter" type="text"></label>
+            <label>{{lang "channels.filterHeader"}}: <input class="filter" type="text"></label>
             <input type="button" class="refresh btn btn-default btn-smaller" value="refresh">
         </div>
     </div>
@@ -10,9 +10,9 @@
         <table class="channels table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>Users</th>
-                    <th>Channel</th>
-                    <th>Topic</th>
+                    <th>{{lang "users"}}</th>
+                    <th>{{lang "channel"}}</th>
+                    <th>{{lang "topic"}}</th>
                 </tr>
             </thead>
             <tbody>
