--- a/panes/partials/customNotice.hbs
+++ b/panes/partials/customNotice.hbs
@@ -1,43 +1,43 @@
 <div class="controls" data-id="{{id}}">
-    <label class="control-inline">{{lang "USER_NOTICE"}}
-        <input type="text" data-id="nick" placeholder="{{lang "NICK_PLACEHOLDER"}}" value="{{nick}}">
+    <label class="control-inline">{{lang "option.USER_NOTICE"}}
+        <input type="text" data-id="nick" placeholder="{{lang "option.NICK_PLACEHOLDER"}}" value="{{nick}}">
     </label>
-    <label class="control-inline">{{lang "MESSAGE_NOTICE"}}
-        <input type="text" data-id="msg" placeholder="{{lang "MESSAGE_PLACEHOLDER"}}" value="{{msg}}">
+    <label class="control-inline">{{lang "option.MESSAGE_NOTICE"}}
+        <input type="text" data-id="msg" placeholder="{{lang "option.MESSAGE_PLACEHOLDER"}}" value="{{msg}}">
     </label>
-    <label class="control-inline">{{lang "TYPE_NOTICE"}}
-        <input type="text" data-id="type" placeholder="{{lang "TYPE_PLACEHOLDER"}}" value="{{type}}">
+    <label class="control-inline">{{lang "option.TYPE_NOTICE"}}
+        <input type="text" data-id="type" placeholder="{{lang "option.TYPE_PLACEHOLDER"}}" value="{{type}}">
     </label>
-    <label class="checkbox-inline">{{lang "MENTIONED"}}
+    <label class="checkbox-inline">{{lang "option.MENTIONED"}}
         <input type="checkbox" data-id="mentioned" {{check mentioned}}>
     </label>
-    <label class="checkbox-inline" title="{{lang 'NOTUS_HINT'}}">{{lang "NOTUS"}}
+    <label class="checkbox-inline" title="{{lang 'option.NOTUS_HINT'}}">{{lang "option.NOTUS"}}
         <input type="checkbox" data-id="notus" {{check notus}}>
     </label>
-    <label class="checkbox-inline" >{{lang "BEEP"}}
+    <label class="checkbox-inline" >{{lang "option.BEEP"}}
         <input type="checkbox" data-id="beep" {{check beep}}>
     </label>
-    <label class="checkbox-inline">{{lang "FLASH"}}
+    <label class="checkbox-inline">{{lang "option.FLASH"}}
         <input type="checkbox" data-id="flash" {{check flash}}>
     </label>
-    <label class="checkbox-inline">{{lang "PM"}}
+    <label class="checkbox-inline">{{lang "option.PM"}}
         <input type="checkbox" data-id="pm" {{check pm}}>
     </label>
-    <label class="checkbox-inline" title="{{lang 'HIGHLIGHT_HINT'}}">{{lang "HIGHLIGHT"}}
+    <label class="checkbox-inline" title="{{lang 'option.HIGHLIGHT_HINT'}}">{{lang "option.HIGHLIGHT"}}
         <input type="checkbox" data-id="highlight" {{check highlight}}>
     </label>
-    <!-- <label class="checkbox-inline">{{lang "HIGHLIGHT"}}
+    <!-- <label class="checkbox-inline">{{lang "option.HIGHLIGHT"}}
         <input type="checkbox" data-id="highlight" {{check highlight}}>
     </label>
-    <label class="checkbox-inline">{{lang "MENTIONED"}}
+    <label class="checkbox-inline">{{lang "option.MENTIONED"}}
         <input type="checkbox" data-id="mentioned" {{check mentioned}}>
     </label> -->
-    <label class="checkbox-inline">{{lang "IGNORE_CASE"}}
+    <label class="checkbox-inline">{{lang "option.IGNORE_CASE"}}
         <input type="checkbox" data-id="case" {{check case}}>
     </label>
-    <label class="checkbox-inline" title="{{lang "ESCAPE_HINT"}}">{{lang "AUTOESCAPE"}}
+    <label class="checkbox-inline" title="{{lang "option.ESCAPE_HINT"}}">{{lang "option.AUTOESCAPE"}}
         <input type="checkbox" data-id="autoescape" {{check autoescape}}>
     </label>
-    <input type="button" value="{{lang "DELETE_NOTICE"}}" class="remove-notice btn btn-danger btn-smaller">
+    <input type="button" value="{{lang "option.DELETE_NOTICE"}}" class="remove-notice btn btn-danger btn-smaller">
     <div class="description">{{description}}</div>
 </div>
