--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -1,21 +1,19 @@
-{{! implement ii8n? }}
 <div class="alert alert-warning fade in">
     <button type="button" class="close" data-trigger="nix" data-nix-options="'target': '!div.alert'">×</button>
-    <h4>Welcome to {{appTitle}}</h4>
+    <h4>{{lang "welcome.title"}}</h4>
     <div class="controls">
         <p>
         {{#if Browser.Features.notifications}}
-            Before you login please enable desktop notifications <a class="enable-notifications btn btn-danger btn-small" href="#">Enable notifications</a>
+            {{lang "welcome.enableNotificationMessage"}} <a class="enable-notifications btn btn-danger btn-small" href="#">{{lang "welcome.enableNotifications"}}</a>
         {{else}}
-            <strong>Your browser does not support desktop notifications.</strong> Consider installing
-            {{#if Browser.ie}} <a href="http://www.google.com/chromeframe/?prefersystemlevel=true" target="_blank">Chrome frame for Internet Explorer</a>
-            <br />Next add <a href="http://gwt-workshop.googlecode.com/files/chframe.reg">this to your registery</a>
-            <br />Now navigate to <a href="gcf:chrome://settings/content" target="_blank">gcf:chrome://settings/content</a> and enable notifications
-            <br /><strong>Or just follow <a href="http://manolocarrasco.blogspot.ca/2011/06/enabling-desktop-notifications-in-ie.html" target="_blank">this tutorial</a> to set up chrome frame.</strong>
+            <strong>{{lang "welcome.noNotificationSupport"}}</strong> {{lang "welcome.considerThis"}}
+            {{#if Browser.ie}} <a href="http://www.google.com/chromeframe/?prefersystemlevel=true" target="_blank">{{lang "welcome.chromeFrame"}}</a>
+            <br />
+            <a href="http://manolocarrasco.blogspot.ca/2011/06/enabling-desktop-notifications-in-ie.html" target="_blank">{{lang "welcome.chromeFrameTut"}}</a></strong>
             {{else}}
-            {{#if Browser.firefox}} <a href="https://addons.mozilla.org/en-US/firefox/addon/tab-notifier/" target="_blank">the Firefox Tab-notifier extension</a>
+            {{#if Browser.firefox}} <a href="https://addons.mozilla.org/en-US/firefox/addon/tab-notifier/" target="_blank">{{lang "welcome.ffExtension"}}</a>
             {{else}}{{! http://caniuse.com/notifications }}
-            an extension to add <a href="http://caniuse.com/notifications" target="_blank">Desktop notifications</a> or a <a href="http://browsehappy.com/?locale=en">current browser release</a>
+            <a href="http://browsehappy.com/?locale=en">{{lang "welcome.browseHappy"}}</a><a href="http://caniuse.com/notifications" target="_blank">{{lang "welcome.desktopNotifications"}}</a> 
             {{/if}}
             {{/if}}
         {{/if}}
@@ -23,7 +21,7 @@
     </div>
     {{#if firstvisit}}
     <div class="controls">
-        <p>Also check out the new options <a class="btn btn-default btn-small" href="#!options">Options</a></p>
+        <p>{{lang "welcome.visitOptions"}} <a class="btn btn-default btn-small" href="#!options">{{lang "windowNames.options"}}</a></p>
     </div>
     {{/if}}
 </div>
