--- a/less/qwebirc/panels.less
+++ b/less/qwebirc/panels.less
@@ -1,27 +1,9 @@
-.qwebirc .custom {
+@select-width: 200px;
 
+.qwebirc .custom {
     //generics
     .container {
         text-align: center;
-    }
-
-    /*********** colour slider ************/
-    .hue-slider {
-        border: 0px solid black;
-        width: 360px;
-        height: 8px;
-        background-image: url(/images/hue.png);
-        display: inline-block;
-        margin-left: 15px;
-
-        .knob {
-            width: 8px;
-            height: 16px;
-            top: -5px;
-            opacity: 0.75;
-            background: grey;
-            border: 1px solid black;
-        }
     }
 
     .header {
@@ -70,9 +52,13 @@
             }
         }
     }
+
+    .control-label-inline select {
+        display: inline;
+        width: @select-width; //requires a width to be set :/
+        margin: 0 5px;
+    }
 }
-
-
 
 /**************** Channel list *****************/
 .qwebirc .channel-list {
