--- a/panes/feedback.hbs
+++ b/panes/feedback.hbs
@@ -1,19 +1,4 @@
-<div class="header">
-  <table>
-    <tr>
-      <td><img src="images/qwebircsmall.png" alt="qwebirc" title="qwebirc"/></td>
-      <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-      <td><div class="title">qwebirc</div><div>Feedback</div></td>
-    </tr>
-  </table>
-</div>
 <div class="container">
-  <p>
-    Thank you for taking the time to try to submit feedback. I currently have not updated this part of the project<br/>
-    If you have found an issue please submit it on my <a href="https://github.com/megawac/qwebirc-enhancements">github repo</a><br/>
-    Thanks for using my app!
-  </p>
-
-  <p>To be continued...</p>
+  <iframe src="https://docs.google.com/forms/d/1DQUg-DOEMbmqqeCryhMr6t20m2EMSkng28HdWIUm2vM/viewform" width="95%" height="500px"></iframe>
   <input type="button" value="Close" data-event="close" class="btn btn-default btn-small" />
 </div>
