Improve l&f colour scheme and update libs

--- a/less/qwebirc/core.less
+++ b/less/qwebirc/core.less
@@ -98,69 +98,6 @@ html, body {
         font-size: 0.8em;
     }
 
-    /* status */
-    .user .status {
-        border-radius: 50%;
-        display: inline-block;
-        margin-right: 3px;
-    }
-    .user .status.voice {
-        width: 8px;
-        height: 8px;
-
-        background-color: rgb(223, 187, 47);
-        background-image: radial-gradient(45px 45px 45deg, circle, yellow 0%, orange 100%, red 95%);
-        animation-name: spin;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-    }
-
-    .user .status.op {
-        width: 8px;
-        height: 8px;
-
-        background-color: #7AE60E;
-        background-image: radial-gradient(45px 45px 45deg, circle, #5FFF4A 3%, #7AE60E 76%);
-        animation-name: spin;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-    }
-
-
-
-    /* type ahead and input decorations */
-    .tt-query {
-        padding: 0;
-        height: 26px;
-        text-indent: 5px;
-        position: relative;
-        vertical-align: top;
-        background-color: transparent;
-    }
-
-    .input .decorated {
-        background-image: linear-gradient(bottom, rgb(235,235,232) 54%, rgb(247,250,240) 66%);
-        //this won't be auto prefixed
-        // background-image: -webkit-gradient(
-        //     linear,
-        //     left bottom,
-        //     left top,
-        //     color-stop(0.54, rgb(235,235,232)),
-        //     color-stop(0.66, rgb(247,250,240))
-        // );
-    }
-    .tt-hint {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        padding: 0;
-        text-indent: 5px;
-        border-color: transparent;
-        box-shadow: none;
-        color: #BDBDBD;
-    }
-    /*end typeahead*/
-
 }
+
+@import "input";
