--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -1,5 +1,6 @@
 //imports 
 @import "image-popover";
+@import "irc-op-status";
 
 
 // Main QUI theme styles 
@@ -33,7 +34,7 @@
     .windows {
         position: absolute;
         width: 100%;
-        top: 25px;
+        top: 26px;
         bottom: 0;
     }
 
