--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -3,7 +3,7 @@
 <head>
 
   <!-- build:process -->
-    <title><% if(config.network) { %>,<%= config.network %> <% } %>WebIRC Using QWebirc v<%= pkg.version %></title>
+    <title><% if(config.network) { %><%= config.network %> <% } %>WebIRC Using QWebirc v<%= pkg.version %></title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
