--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="control-group right {{#unless full}}hidden{{/unless}}">
             <label class="control-label" for="username">{{lang 'username'}}:
-                <input type="text" class="form-control" data-validate="username" name="full" id="username" value="{{username}}" placeholder="{{network}} {{lang 'username'}}">
+                <input type="text" class="form-control" data-validate="username" name="full" id="username" value="{{username}}" placeholder="{{networkName}} {{lang 'username'}}">
             </label>
         </div>
         <div class="control-group right {{#unless full}}hidden{{/unless}}">
